# Gempyre

./: .gitignore  CMakeLists.txt  Instructions.md  README.md  README_raspberry.md  annotated.html  annotated_dup.js  classGempyreUtils_1_1LogWriter-members.html  classGempyreUtils_1_1LogWriter.html  classGempyreUtils_1_1LogWriter.js  classGempyreUtils_1_1Result-members.html  classGempyreUtils_1_1Result.html  classGempyreUtils_1_1Result.js  classGempyre_1_1Bitmap-members.html  classGempyre_1_1Bitmap.html  classGempyre_1_1Bitmap.js  classGempyre_1_1CanvasElement-members.html  classGempyre_1_1CanvasElement.html  classGempyre_1_1CanvasElement.js  classGempyre_1_1CanvasElement__coll__graph.map  classGempyre_1_1CanvasElement__coll__graph.md5  classGempyre_1_1CanvasElement__inherit__graph.map  classGempyre_1_1Dialog-members.html  classGempyre_1_1Dialog.html  classGempyre_1_1Dialog.js  classGempyre_1_1Element-members.html  classGempyre_1_1Element.html  classGempyre_1_1Element.js  classGempyre_1_1Element__inherit__graph.map  classGempyre_1_1Element__inherit__graph.md5  classGempyre_1_1EventMap.html  classGempyre_1_1EventQueue.html  classGempyre_1_1FrameComposer-members.html  classGempyre_1_1FrameComposer.html  classGempyre_1_1FrameComposer.js  classGempyre_1_1HtmlStream-members.html  classGempyre_1_1HtmlStream.html  classGempyre_1_1HtmlStream.js  classGempyre_1_1HtmlStream__coll__graph.map  classGempyre_1_1HtmlStream__inherit__graph.md5  (+141 more)
affiliates/: CMakeLists.txt
affiliates/client/: CMakeLists.txt  mainwindow.cpp
affiliates/include/: CMakeLists.txt  gempyre_client.h  telex_client.h
affiliates/py_client/: CMakeLists.txt  Untitled-2  pyclient.py  requirements.txt  setup.py
affiliates/py_uisrv/: CMakeLists.txt  ui_srv.py  ui_srvclient.py
affiliates/qt_client/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
affiliates/telexclient/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
affiliates/test/: CMakeLists.txt
affiliates/test/gui/: affiliates_test.html
affiliates/test/src/: affiliates_test.cpp
affiliates/test_rpc/: CMakeLists.txt
affiliates/test_rpc/gui/: affiliates_test_rpc.html
affiliates/test_rpc/src/: affiliates_test_rpc.cpp
apps/calc/: CMakeLists.txt
apps/calc/gui/: calc.css  calc.html
apps/calc/src/: computor.h  main.cpp
apps/mandelbrot/: CMakeLists.txt
apps/mandelbrot/gui/: mandelbrot.css  mandelbrot.html
apps/mandelbrot/src/: main.cpp  mandelbrot.h  mandelbrotdraw.h
apps/treeview/: CMakeLists.txt
apps/treeview/gui/: tree.css  treeview.html
apps/treeview/src/: main.cpp
blog/hello/: CMakeLists.txt
blog/hello/gui/: hello.html
blog/hello/src/: main.cpp
blog/hello2/: CMakeLists.txt
blog/hello2/gui/: main.html
blog/hexview/: CMakeLists.txt
blog/hexview/gui/: hexview.css  hexview.html
blog/hexview/src/: main.cpp
examples/audio/: CMakeLists.txt
examples/audio/src/: main.cpp
examples/dialogs/: CMakeLists.txt
examples/dialogs/gui/: dialogs_test.html
examples/dialogs/src/: main.cpp
examples/drawcanvas/: CMakeLists.txt
examples/drawcanvas/src/: main.cpp
examples/eval/: CMakeLists.txt
examples/eval/gui/: eval.html
examples/eval/src/: main.cpp
examples/fire/: CMakeLists.txt
examples/fire/gui/: fire.html
examples/fire/src/: main.cpp
examples/flakes/: CMakeLists.txt
examples/flakes/gui/: flakes.html
examples/flakes/src/: main.cpp
examples/hello/: CMakeLists.txt
examples/hello/src/: main.cpp
examples/hello2/: CMakeLists.txt
examples/hello2/src/: main.cpp
examples/helloworld/: CMakeLists.txt  html_resource.h  main.cpp
examples/helloworld/gui/: index.html
examples/imageblit/: CMakeLists.txt
examples/imageblit/gui/: imageblit.html
examples/imageblit/src/: main.cpp
examples/imageblit/stuff/: imageblittest
examples/snowflakes/: CMakeLists.txt
examples/snowflakes/gui/: snowflakes.html
examples/snowflakes/src/: koch.cpp  koch.h  main.cpp
examples/tick/: CMakeLists.txt
examples/tick/src/: main.cpp
gempyrelib/: CMakeLists.txt
gempyrelib/cmake/: FinduSockets.cmake.in  Finduva.cmake.in  config.cmake.in  libwebsockets.cmake  libwebsockets_config.cmake  uwebsocket.cmake  uwebsockets.cmake  uwebsockets.config  uwebsockets_config.cmake  websocketpp.cmake
gempyrelib/conf/: gempyre.conf  gempyre_default.conf
gempyrelib/include/: gempyre.h  gempyre_bitmap.h  gempyre_client.h  gempyre_graphics.h  gempyre_types.h  gempyre_utils.h
gempyrelib/js/: gempyre.js
gempyrelib/py/: pyclient.py
gempyrelib/src/: android.cpp  base64.cpp  bitmap.cpp  broadcaster.h  canvas_data.cpp  canvas_data.h  core.cpp  core.h  data.cpp  data.h  element.cpp  eventqueue.h  gempyre_internal.cpp  gempyre_internal.h  graphics.cpp  idlist.h  internal.h  json.cpp  json.h  logging.cpp  main.cpp  semaphore.h  server.cpp  server.h  timequeue.h  timer.cpp  timer.h  ui_pfd.cpp  utils.cpp
gempyrelib/src/android/: android.cpp
gempyrelib/src/libwebsockets/: lws_server.h  server.cpp
gempyrelib/src/server/: broadcaster.h  core.cpp  core.h  element.cpp  eventqueue.h  gempyre_internal.cpp  (+4 more)
telexlib/: CMakeLists.txt
telexlib/cmake/: config.cmake.in
telexlib/include/: telex.h  telex_graphics.h  telex_utils.h
telexlib/js/: telex.js
telexlib/src/: base64.cpp  base64.h  element.cpp  eventqueue.h  idlist.h  json.cpp  json.h  main.cpp  semaphore.h  server.cpp  server.h  telex.cpp  telex_graphics.cpp  telex_internal.h  timer.cpp  timer.h  utils.cpp
test/: CMakeLists.txt  gempyre_apps.sh
test/apitests/: CMakeLists.txt  apitests.cpp  apitests.html  core_tests.cpp  gempyre_test.cpp  gempyre_test.h  graphics_test.cpp  mock_tests.cpp  ui_tests.cpp
test/audio/: CMakeLists.txt
test/drawcanvas/: CMakeLists.txt  drawcanvastest
test/eval/: CMakeLists.txt
test/helloworld/: CMakeLists.txt  main.cpp
test/imageblit/: CMakeLists.txt
test/install_test/: CMakeLists.txt  install_test.sh  msvc_test.bat
test/lib_test/: CMakeLists.txt  main.cpp
test/mock_browser/: CMakeLists.txt  libwebsocket.cmake  mock_browser.cpp  ws.cpp  ws.hpp  ws_app.cpp
test/tick/: CMakeLists.txt
test/unittests/: CMakeLists.txt  tests.cpp  unittests.cpp
(+175 files in other folders)
