cmake_minimum_required (VERSION 3.14)
set(NAME affiliates)
project (${NAME})
add_subdirectory(include)
if(DEFINED ENV{QTDIR})
    add_subdirectory(qt_client)
else()
    message("QTDIR not set, Qt assumed not to be installed. Qt client not built")
endif()
add_subdirectory(py_client)
add_subdirectory(test)

