cmake_minimum_required (VERSION 3.14)
set(NAME affiliates)
project (${NAME})
add_subdirectory(include)
if(NOT ANDROID)
    if(NOT WIN32 OR MSVC)
        if(DEFINED ENV{QTDIR})
            add_subdirectory(qt_client)
        else()
            message("QTDIR not set, Qt assumed not to be installed. Qt client not built")
        endif()
    else()
        message("GCC does not support webengineview")
    endif()
    add_subdirectory(py_client)
    add_subdirectory(py_uisrv)
    add_subdirectory(test)
    add_subdirectory(test_rpc)
else()
    message("Android does not support affiliates")
endif()
